add: translation lt, en

--- a/app/i18n/locales/en/head.json
+++ b/app/i18n/locales/en/head.json
@@ -2,6 +2,5 @@
   "home": "Home",
   "shop": "Shop",
   "about": "About",
-  "contacts": "Contacts",
-  "login": "Login"
+  "contacts": "Contacts"
 }
