--- a/app/i18n/locales/lt/head.json
+++ b/app/i18n/locales/lt/head.json
@@ -2,6 +2,5 @@
   "home": "Namai",
   "shop": "Parduotuvė",
   "about": "Apie",
-  "contacts": "Kontaktai",
-  "login": "Prisijungti"
+  "contacts": "Kontaktai"
 }
