--- a/app/i18n/locales/lt/shop.json
+++ b/app/i18n/locales/lt/shop.json
@@ -1,3 +1,12 @@
 {
-  "heh": "asd"
+  "title": "Parduotuvė",
+  "categories": "Kategorijos",
+  "hideSoldOut": "Slėpti Išparduotus",
+  "select": {
+    "sortBy": "Rūšiuoti pagal",
+    "priceLF": "Kaina: pirmiausia žemiausia",
+    "priceHF": "Kaina: pirmiausia aukščiausia",
+    "dateNF": "Data: pirmiausia naujausi",
+    "dateOF": "Data: pirmiausia seniausi"
+  }
 }
