fix: empty shop

--- a/app/i18n/locales/en/shop.json
+++ b/app/i18n/locales/en/shop.json
@@ -28,6 +28,8 @@
   "delete": "Delete",
   "edit": "Edit",
 
+  "shopClosed": "Shop is currently out of items",
+  "missingSettings": "Please set up settings first",
   "itemIsSoldOut": "Item is sold out",
   "description": "Description:"
 }
