--- a/app/i18n/locales/lt/admin.json
+++ b/app/i18n/locales/lt/admin.json
@@ -1,5 +1,5 @@
 {
-  "adminReq": "Šiam puslapiui reikalingas administratorius",
+  "adminReq": "Šiam puslapiui reikalingos administratoriaus privilegijos",
 
   "orders": "užsakymai",
   "shopboard": "parduotuvė",
