--- a/app/i18n/locales/lt/shop.json
+++ b/app/i18n/locales/lt/shop.json
@@ -28,6 +28,8 @@
   "delete": "Ištrinti",
   "edit": "Redaguoti",
 
+  "shopClosed": "Šiuo metu parduotuvėje nėra prekių",
+  "missingSettings": "Pirmiausia nustatykite nustatymus",
   "itemIsSoldOut": "Prekė išparduota",
   "description": "Aprašymas:"
 }
