add: translate cart interface

--- a/app/i18n/locales/en/cart.json
+++ b/app/i18n/locales/en/cart.json
@@ -11,5 +11,11 @@
 
   "orderTotal": "ORDER TOTAL",
   "clearCart": "Clear cart",
-  "submit": "Submit"
+  "submit": "Submit",
+
+  "itemCartInterface": {
+    "inStock": "in stock:",
+    "addToCart": "ADD TO CART",
+    "removeFromCart": "REMOVE FROM CART"
+  }
 }
