--- a/app/i18n/locales/lt/admin.json
+++ b/app/i18n/locales/lt/admin.json
@@ -31,6 +31,9 @@
   "arrived": "ATVYKO",
   "collected": "PAIMTAS",
 
+  "update": "Atnaujinti",
+  "hide": "Slėpti",
+
   "general": {
     "h2": "Pagrindiniai",
     "itemsPerPage": "Produktu per puslapį",
@@ -65,6 +68,5 @@
     "loading": "Saving...",
     "success": "Settings saved!",
     "error": "Could not save."
-  },
-  "update": "Atnaujinti"
+  }
 }
